--- a/site/google.html
+++ b/site/google.html
@@ -1,23 +1,61 @@
-<!DOCTYPE html>
 <html>
-<head>
-	<title>Google</title>
-	<link rel="stylesheet" type="text/css" href="google.css">
-</head>
-<body>
-
-	<div class="container">
-		<div>
-			<img src="google.svg" alt="">
-		</div>
-		<div class="input container">
-			<input type="text" placeholder="Search" name="" value="">
-		</div>
-		<div class="btn container">
-			<span class="btn1"><button type="button" name="button">Google Search</button></span>
-			<span class="btn2"><button type="button" name="button">I'm Feeling Lucky</button></span>
-		</div>
-	</container>
-
-</body>
+  <head>
+    <title>Google Search Clone</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome-font-awesome.min.css">
+    <link rel="stylesheet" href="google.css">
+  </head>
+  <body>
+    <div class="top-bar">
+      <div class="bar-right">
+        <div class="menu">
+          <a href="">Gmail</a>
+          <a href="">Images</a>
+        </div>
+        <a href="" class="app-toggle">
+          <i class="fa fa-ellipsis-h"></i>
+        </a>
+        <a href="" class="profile-trigger">
+          <img src="profile.jpeg">
+        </a>
+      </div>
+    </div>
+    <div class="content">
+      <div class="search-wrapper">
+        <a href="" class="search-logo">
+          <img src="google.svg">
+        </a>
+        <div class="search-bar">
+          <div class="search-icon">
+            <i class="fa fa-search"></i>
+          </div>
+          <input type="text">
+          <div class="search-icon right">
+            <i class="fa fa-microphone"></i>
+          </div>
+        </div>
+        <div class="search-buttons">
+          <a href="">Google Search</a>
+          <a href="">I'm Feeling Lucky</a>
+        </div>
+       
+      </div>
+    </div>
+    <div class="bottom-bar">
+      <div class="bar-left">
+        <div class="menu">
+          <a href="">Advertising</a>
+          <a href="">Business</a>
+          <a href="">How Search Works</a>
+        </div>
+      </div>
+      <div class="bar-right">
+        <div class="menu">
+          <a href="">Privacy</a>
+          <a href="">Terms</a>
+          <a href="">Settings</a>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
