--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -11,44 +11,7 @@
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
   </head>
 <body>
-  <!--<header>
-    <nav id="header-nav" class="navbar navbar-default">
-      <div class="container">
-        <div class="navbar-header">
-          <div class="navbar-brand">
-            <a href="index.html"><h1>Food, LLC</h1></a>
-          </div>
-
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-
-        <div id="collapsable-nav" class="collapse navbar-collapse">
-           <ul id="nav-list" class="nav navbar-nav navbar-right">
-            
-            <li class="visible-xs active">
-              <a href="#"> Chicken</a>
-            </li>
-
-            <li>
-              <a href="#"> Beef</a>
-            </li>
-            <li>
-              <a href="#"> Sushi</a>
-            </li>            
-         
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header> -->
-
-
-  <header>
+   <header>
     <nav id="header-nav" class="navbar navbar-default nav-justified">
       <div class="container">
         <div class="navbar-header">
@@ -82,9 +45,9 @@
     </nav><!-- #header-nav -->
   </header>
 
-  <div id="main-content" class="container">
+  <div class="container">
     <h2> Our Menu</h2>
-    <div id="home-content" class="row">
+    <div class="row">
       <div class="col-md-4 col-sm-6 col-xs-12 menu-box">
         <h3>Chicken</h3>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
